--- a/client/src/index.html
+++ b/client/src/index.html
@@ -7,6 +7,11 @@
     <title>react project structure</title>
     <style>
         * {margin: 0; padding: 0;}
+        html, body, #root {
+            height: 100%;
+            font-style: Tahoma;
+            overflow: hidden;
+        }
     </style>
 </head>
 <body>
