--- a/client/src/index.html
+++ b/client/src/index.html
@@ -9,7 +9,7 @@
         * {margin: 0; padding: 0;}
         html, body, #root {
             height: 100%;
-            font-style: Tahoma;
+            font-family: Tahoma;
             overflow: hidden;
         }
     </style>
